--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab"
+    tools:context="com.example.tablayout.fragment1"
+    tools:showIn="@layout/activity_main">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="26sp"
+        android:layout_marginRight="8dp"
+        android:id="@+id/textView1"
+        android:text="Search" />
+
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/textView1"
+        android:id="@+id/editTextFilter"/>
 
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_Item1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab1" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_Item2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab2" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_Item3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab3" />
-    </com.google.android.material.tabs.TabLayout>
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewpager"
+    <ListView
+        android:choiceMode="multipleChoice"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@id/editTextFilter"
+        android:textFilterEnabled="true"
+        android:id="@+id/listview1"/>
+
+    <Button
+        android:id="@+id/addPhone"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/ic_baseline_add_circle_24"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"/>
+
+</RelativeLayout>
