--- a/app/src/main/res/layout/item_clicked.xml
+++ b/app/src/main/res/layout/item_clicked.xml
@@ -12,7 +12,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/anonymous"/>
+            android:id="@+id/image"/>
     </LinearLayout>
 
     <LinearLayout
