--- a/app/src/main/res/layout/sub2_listview_item.xml
+++ b/app/src/main/res/layout/sub2_listview_item.xml
@@ -8,11 +8,12 @@
         android:id="@+id/imageView1"
         android:layout_width="50dp"
         android:layout_height="60dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"
+        android:layout_gravity="center"
+
         android:layout_marginTop="10dp"
-        android:scaleType="centerInside"
-        android:layout_weight="1" />
+        android:layout_marginBottom="10dp"
+        android:layout_weight="2"
+        android:scaleType="centerInside" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -25,22 +26,25 @@
             android:layout_height="wrap_content"
             android:text="New Text"
             android:id="@+id/textView1"
-            android:textSize="16dp"
-            android:layout_marginLeft="40dp"
+            android:textSize="16sp"
+            android:layout_marginStart="40dp"
             android:textColor="#000000"
-            android:gravity="center_vertical"
-            android:layout_weight="2" />
+            android:gravity="start"
+            android:layout_weight="2"
+            android:layout_marginLeft="40dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="New Text"
             android:id="@+id/textView2"
-            android:textSize="10dp"
+            android:textSize="12sp"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="10dp"
             android:textColor="#666666"
-            android:layout_weight="1" />
+            android:gravity="start"
+            android:layout_weight="1"
+            android:layout_marginStart="50dp" />
     </LinearLayout>
 
 </LinearLayout>
