--- a/app/src/main/res/layout/item_clicked.xml
+++ b/app/src/main/res/layout/item_clicked.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="#ECE6CC"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
@@ -24,12 +25,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bm"
             android:text="이름 : "
             android:textSize="20dp"/>
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bm"
             android:text="myname"
             android:textSize="20dp"/>
     </LinearLayout>
@@ -43,12 +46,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bm"
             android:text="성별 : "
             android:textSize="20dp"/>
         <TextView
             android:id="@+id/tv_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bm"
             android:text="myname"
             android:textSize="20dp"/>
     </LinearLayout>
@@ -63,31 +68,39 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bm"
             android:text="전화번호 : "
             android:textSize="20dp"/>
         <TextView
             android:id="@+id/tv_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bm"
             android:text="myname"
             android:textSize="20dp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
             android:id="@+id/btnDial"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="60dp"
+            android:fontFamily="@font/bm"
+            android:layout_weight="1"
             android:text="다이얼로 가기" />
         <Button
-            android:layout_marginLeft="150dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="10dp"
             android:id="@+id/btnCall"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bm"
+            android:layout_weight="1"
             android:text="전화 걸기" />
     </LinearLayout>
 
