--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -26,6 +26,7 @@
             android:textSize="24dp"
             android:textColor="#000000"
             android:gravity="center_vertical"
+            android:fontFamily="@font/bm"
             android:layout_weight="2" />
 
         <TextView
@@ -34,6 +35,7 @@
             android:text="New Text"
             android:id="@+id/textView2"
             android:textSize="16dp"
+            android:fontFamily="@font/bm"
             android:textColor="#666666"
             android:layout_weight="1" />
     </LinearLayout>
