--- a/app/src/main/res/layout/sub2_clicked.xml
+++ b/app/src/main/res/layout/sub2_clicked.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ECE6CC"
     tools:context=".MusicItemClicked">
 
     <ImageView
@@ -27,6 +28,7 @@
         android:layout_marginRight="24dp"
         android:gravity="center"
         android:text="TextView"
+        android:fontFamily="@font/bm"
         android:textColor="#000000"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +48,7 @@
         android:text="TextView"
         android:textColor="#666666"
         android:textSize="18sp"
+        android:fontFamily="@font/bm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,6 +108,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:text="00:00"
+        android:fontFamily="@font/bm"
         app:layout_constraintBottom_toBottomOf="@+id/mSeekBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/mSeekBar" />
@@ -116,6 +120,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="05:00"
+        android:fontFamily="@font/bm"
         app:layout_constraintBottom_toBottomOf="@+id/mSeekBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/mSeekBar" />
