--- a/app/src/main/res/layout/sub2_listview_item.xml
+++ b/app/src/main/res/layout/sub2_listview_item.xml
@@ -6,20 +6,18 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="50dp"
-        android:layout_height="60dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center"
-
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_weight="2"
-        android:scaleType="centerInside" />
+        android:scaleType="centerInside"/>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="4">
+        android:layout_height="match_parent">
 
         <TextView
             android:layout_width="match_parent"
@@ -28,8 +26,10 @@
             android:id="@+id/textView1"
             android:textSize="16sp"
             android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
             android:textColor="#000000"
             android:gravity="start"
+            android:fontFamily="@font/bm"
             android:layout_weight="2"
             android:layout_marginLeft="40dp" />
 
@@ -42,6 +42,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="10dp"
             android:textColor="#666666"
+            android:fontFamily="@font/bm"
             android:gravity="start"
             android:layout_weight="1"
             android:layout_marginStart="50dp" />
